--- a/public/style.css
+++ b/public/style.css
@@ -283,10 +283,44 @@ p {
     margin-bottom: 10px;
 }
 
+/* 文章部分样式 */
+.articles {
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-
-/* 上传文章按钮样式 */
-.upload-article-section {
+.articles h2 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
     text-align: center;
-    margin: 20px 0;
+}
+
+.articles ul {
+    list-style-type: none; /* 去除默认的列表样式 */
+    padding: 0;
+}
+
+.articles li {
+    background-color: #fff;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s;
+}
+
+.articles li:hover {
+    background-color: #f9f9f9;
+}
+
+.articles a {
+    text-decoration: none;
+    color: #61dafb;
+    font-size: 18px;
+}
+
+.articles a:hover {
+    text-decoration: underline;
 }
