--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Roboto', sans-serif;
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     margin: 0;
@@ -323,4 +324,15 @@ p {
 
 .articles a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    #article-content {
+        padding: 15px;
+        margin: 0 10px;
+    }
+
+    #article-title {
+        font-size: 2rem;
+    }
 }
