--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
+    
 }
 
 header {
@@ -422,4 +423,25 @@ p {
     #article-title {
         font-size: 2rem;
     }
+}
+
+/* page */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination button {
+    padding: 10px 20px;
+    margin: 0 5px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.pagination button:hover {
+    background-color: #45a049;
 }
