--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #929292;
     margin: 0;
     padding: 0;
     
